# octopus-v2-playground

./: .gitignore  android_benchmark.xlsx  benchmark.py  llm.py  main.py  pyproject.toml
helloworld/: CHANGELOG  pyproject.toml
helloworld/src/helloworld/: __main__.py  app.py
